# template

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/api/v1/: api.py
backend/api/v1/endpoints/: post.py  tag.py
backend/config/: database.py  setting.py
backend/migrations/: env.py
backend/migrations/versions/: 3503bd017405_add_posts_table.py  72e183fe9fb8_add_tag_table.py
backend/models/: base.py  post.py  tag.py
backend/schemas/: post.py  tag.py
frontend/: .eslintrc.js  .gitignore  .prettierrc  Dockerfile  babel.config.js  bitbucket-pipelines.yml  cypress.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/components/: index.ts
frontend/src/components/BottomContainer/: index.vue
frontend/src/components/Drawer/: index.vue
frontend/src/components/HeaderBar/: index.vue
frontend/src/components/Navigation/: index.vue
frontend/src/components/SectionHeader/: index.vue
frontend/src/locale/: ja.json
frontend/src/pages/: index.ts
frontend/src/pages/AddOrder/: addOrder.ts  index.vue
frontend/src/pages/CreateOrderDetail/: index.vue
frontend/src/pages/Home/: index.vue
frontend/src/pages/Menu/: index.vue  menu.ts
frontend/src/pages/Order/: index.vue  mockup.ts
frontend/src/pages/OrderByAuction/: index.vue  orders.ts
frontend/src/pages/Sales/: index.vue
frontend/src/plugins/: axios.ts  i18n.ts  index.ts  moment.ts  numbro.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/utils/: index.ts  theme.ts  urlPath.ts
(+8 files in other folders)
